# pnp_pose_estimation

./: BaseCamera.h  CMakeLists.txt  CameraConfig.h  HikvisionCamera.cpp  HikvisionCamera.h  README_cn.md  infrared_solvePnP.cpp  infrared_solvePnP.h  main.cpp
